--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
-<html ng-app>
+<html>
   <head>
     <title>Serv App</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   </head>
   <body>
+    <div ng-app="bookingApp">
+      <calendar></calendar>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="app/app.js"></script>
+    <script src="app/directives/calendar.js"></script>
   </body>
 </html>
