--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   </head>
   <body>
     <div ng-app="bookingApp">
-      <calendar></calendar>
+      <div ng-controller="CalendarController">
+        <calendar></calendar>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/directives/calendar.js"></script>
+    <script src="app/calendar/calendar.js"></script>
   </body>
 </html>
