Added timeslot availability display

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   </head>
   <body>
     <div ng-app="bookingApp">
-      <div ng-controller="CalendarController">
-        <calendar></calendar>
+      <div>
+        <calendar ng-controller="CalendarController"></calendar>
+        <availability ng-controller="AvailabilityController"></availability>
       </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/calendar/calendar.js"></script>
+    <script src="app/facilities/facilities.js"></script>
+    <script src="app/facilities/availability/availability.js"></script>
+    <script src="app/facilities/availability/availabilityFactory.js"></script>
   </body>
 </html>
