--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/calendar/calendar.js"></script>
+    <script src="app/calendar/calendarFactory.js"></script>
     <script src="app/facilities/facilities.js"></script>
     <script src="app/facilities/availability/availability.js"></script>
     <script src="app/facilities/availability/availabilityFactory.js"></script>
