Added rates display

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="app/facilities/facilities.js"></script>
     <script src="app/facilities/availability/availability.js"></script>
     <script src="app/facilities/availability/availabilityFactory.js"></script>
+    <script src="app/facilities/rates/ratesFactory.js"></script>
   </body>
 </html>
