--- a/app/facilities/availability/availability.html
+++ b/app/facilities/availability/availability.html
@@ -8,7 +8,7 @@
         {{ time + ".00"}} 
         <button ng-click="display.booking.roomA[startTime+$index]=!display.booking.roomA[startTime+$index]">Book</button>
         <div ng-show="display.booking.roomA[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('roomA').price }} per {{ getRates('roomA').hours }} hour(s)):
           <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.roomA"/>
           <button ng-click="bookSlot('roomA', year(), month(), day(), time, durations.roomA)">Confirm</button>
         </div>
@@ -23,7 +23,7 @@
         {{ time + ".00"}}
         <button ng-click="display.booking.roomB[startTime+$index]=!display.booking.roomB[startTime+$index]">Book</button>
         <div ng-show="display.booking.roomB[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('roomB').price }} per {{ getRates('roomB').hours }} hour(s)):
           <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.roomB"/>
           <button ng-click="bookSlot('roomB', year(), month(), day(), time, durations.roomB)">Confirm</button>
         </div>
@@ -38,7 +38,7 @@
         {{ time + ".00"}}
         <button ng-click="display.booking.spaceA[startTime+$index]=!display.booking.spaceA[startTime+$index]">Book</button>
         <div ng-show="display.booking.spaceA[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('spaceA').price }} per {{ getRates('spaceA').hours }} hour(s)):
           <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.spaceA"/>
           <button ng-click="bookSlot('spaceA', year(), month(), day(), time, durations.spaceA)">Confirm</button>
         </div>
@@ -53,7 +53,7 @@
         {{ time + ".00"}}
         <button ng-click="display.booking.spaceB[startTime+$index]=!display.booking.spaceB[startTime+$index]">Book</button>
         <div ng-show="display.booking.spaceB[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('spaceB').price }} per {{ getRates('spaceB').hours }} hour(s)):
           <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.spaceB"/>
           <button ng-click="bookSlot('spaceB', year(), month(), day(), time, durations.spaceB)">Confirm</button>
         </div>
@@ -68,7 +68,7 @@
         {{ time + ".00"}}
         <button ng-click="display.booking.full[startTime+$index]=!display.booking.full[startTime+$index]">Book</button>
         <div ng-show="display.booking.full[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('full').price }} per {{ getRates('full').hours }} hour(s)):
           <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.full"/>
           <button ng-click="bookSlot('full', year(), month(), day(), time, durations.full)">Confirm</button>
         </div>
@@ -83,7 +83,7 @@
         {{ time + ".00"}}
         <button ng-click="display.booking.court[startTime+$index]=!display.booking.court[startTime+$index]">Book</button>
         <div ng-show="display.booking.court[startTime+$index]">
-          Number of hours:
+          Number of hours (${{ getRates('court').price }} per {{ getRates('court').hours }} hour(s)):
           <input type="number" min="2" max="{{ endTime - (startTime + $index) }}" step="2" ng-model="durations.court"/>
           <button ng-click="bookSlot('court', year(), month(), day(), time, durations.court)">Confirm</button>
         </div>
