--- a/app/facilities/availability/availability.html
+++ b/app/facilities/availability/availability.html
@@ -4,12 +4,12 @@
     {{ location.title }}
     <button ng-click="display[location.short]=!display[location.short]">Toggle Display</button>
     <ul ng-show="display[location.short]">
-      <li ng-repeat="(time, isBooked) in getSlots(location.short, year(), month(), day())" ng-if="!timeslots[location.short][dateString(year(), month(), day())][time]">
+      <li ng-repeat="(time, isBooked) in getSlots(location.short, year(), month(), day())" ng-if="isValidSlot(location.short, time)">
         {{ time + ".00"}} 
-        <button ng-click="display.booking[location.short][startTime+$index]=!display.booking[location.short][startTime+$index]">Book</button>
-        <div ng-show="display.booking[location.short][startTime+$index]">
+        <button ng-click="display.booking[location.short][startTime()+$index]=!display.booking[location.short][startTime()+$index]">Book</button>
+        <div ng-show="display.booking[location.short][startTime()+$index]">
           Number of hours (${{ getRates(location.short).price }} per {{ getRates(location.short).hours }} hour(s)):
-          <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations[location.short]"/>
+          <input type="number" min="1" max="{{ endTime() - (startTime() + $index) }}" ng-model="durations[location.short]"/>
           <button ng-click="bookSlot(location.short, year(), month(), day(), time, durations[location.short])">Confirm</button>
         </div>
       </li>
@@ -19,12 +19,12 @@
     Full (Space A + B)
     <button ng-click="display.full=!display.full">Toggle Display</button>
     <ul ng-show="display.full">
-      <li ng-repeat="(time, isBooked) in timeslots.spaceA[dateString(year(), month(), day())]" ng-if="!timeslots.spaceA[dateString(year(), month(), day())][time] && !timeslots.spaceB[dateString(year(), month(), day())][time]">
+      <li ng-repeat="(time, isBooked) in timeslots.spaceA[dateString(year(), month(), day())]" ng-if="isValidSlot('full', time)">
         {{ time + ".00"}}
-        <button ng-click="display.booking.full[startTime+$index]=!display.booking.full[startTime+$index]">Book</button>
-        <div ng-show="display.booking.full[startTime+$index]">
+        <button ng-click="display.booking.full[startTime()+$index]=!display.booking.full[startTime()+$index]">Book</button>
+        <div ng-show="display.booking.full[startTime()+$index]">
           Number of hours (${{ getRates('full').price }} per {{ getRates('full').hours }} hour(s)):
-          <input type="number" min="1" max="{{ endTime - (startTime + $index) }}" ng-model="durations.full"/>
+          <input type="number" min="1" max="{{ endTime() - (startTime() + $index) }}" ng-model="durations.full"/>
           <button ng-click="bookSlot('full', year(), month(), day(), time, durations.full)">Confirm</button>
         </div>
       </li>
@@ -34,12 +34,12 @@
     Basketball Court
     <button ng-click="display.court=!display.court">Toggle Display</button>
     <ul ng-show="display.court">
-      <li ng-repeat="(time, isBooked) in getSlots('court', year(), month(), day())" ng-if="isValidCourtSlot(time)">
+      <li ng-repeat="(time, isBooked) in getSlots('court', year(), month(), day())" ng-if="isValidSlot('court', time)">
         {{ time + ".00"}}
-        <button ng-click="display.booking.court[startTime+$index]=!display.booking.court[startTime+$index]">Book</button>
-        <div ng-show="display.booking.court[startTime+$index]">
+        <button ng-click="display.booking.court[startTime()+$index]=!display.booking.court[startTime()+$index]">Book</button>
+        <div ng-show="display.booking.court[startTime()+$index]">
           Number of hours (${{ getRates('court').price }} per {{ getRates('court').hours }} hour(s)):
-          <input type="number" min="2" max="{{ endTime - (startTime + $index) }}" step="2" ng-model="durations.court"/>
+          <input type="number" min="2" max="{{ endTime() - (startTime() + $index) }}" step="2" ng-model="durations.court"/>
           <button ng-click="bookSlot('court', year(), month(), day(), time, durations.court)">Confirm</button>
         </div>
       </li>
